v1.6
	+ Album browsing mode, additional details in library views
	+ Real-time searching of library (search as you type)
	+ Fullscreen album art mode (via right-click on artwork) (mips)
	+ Show file path in tooltip for library search results
	+ Default to updating selected paths in library, not entire library
	+ Drag-and-drop to copy files from Sonata to a file manager (Kamil)
	+ Ability to show file paths in tag editing window
	+ Use plchanges for faster performance (e.g. add to playlist)
	+ Only minimize to trayicon on click if focused; raise if not focused
	+ Use new 'listplaylists' command for retrieving playlists
	+ Better error trapping
	+ Make process name 'sonata' for linux (himdel)
	+ Look for <artist> - <title>.txt lyrics files by other clients
	+ Add Traditional Chinese translation (b4283)
	+ Code modernisation, modularisation, overall cleanup, documentation
	+ A prototype of a plug-in system
	+ Unicode fixes
	+ Some helpful error messages if startup fails
	+ Useless code removed, various code cleanups and refactorings (Stephen)
	+ Bug: Bad profiles prevent Sonata from starting
	+ Bug: Error for CLI arguments when Sonata can't connect to MPD (Juan)
	+ Bug: Files may not update in interface after tag editing
	+ Bug: Traceback with Turkish locale
	+ Bug: Lyrics don't work with python-zsi 2.0 on Ubuntu
	+ Bug: Bell sound when going to parent folder using backspace

v1.5.3 - September 13, 2008
	+ Quick link to edit lyrics through LyricWiki
	+ Unicode lyrics and better searching with LyricWiki (orivej)
	+ Store audioscrobbler password as md5 hash
	+ Add Greek translation (Lazaros)
	+ Bug: Fix lost connection when hard drive is spun down
	+ Bug: Fix non-ascii characters when scrobbling with non-utf8 locale
	+ Bug: Selected item changed on double-click
	+ Bug: Use consistent behavior for titlebar
	+ Bug: Prevent bad cover image files from causing problems
	+ Bug: Don't sort library search results
	+ Bug: Ensure image filenames are escaped in search routine
